--- a/index.html
+++ b/index.html
@@ -107,4 +107,5 @@
           <a href="#!" class="text-white me-4">
             <i class="fab fa-twitter"></i>
           </a>
+          </html>
           
